Opening image files as movies #56003

Closed
opened 2018-07-16 22:15:46 +02:00 by ChristopherAnderssarian · 5 comments

System Information
Windows 7

Blender Version
Broken: git20180716.dc123ac9e5a
Worked: 2.79

Short description of error

Blender chashes when opening image files

Exact steps for others to reproduce the error

In the VSE Add>Movie
select "Show image files" in the filter settings
select an image
Add image strip
crash


Opening images as movies (should) add them as individual images.

**System Information** Windows 7 **Blender Version** Broken: git20180716.dc123ac9e5a Worked: 2.79 **Short description of error** Blender chashes when opening image files **Exact steps for others to reproduce the error** In the VSE Add>Movie select "Show image files" in the filter settings select an image Add image strip crash ____ Opening images as movies (should) add them as individual images.

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian
ChristopherAnderssarian changed title from Opening images files as movies to Opening image files as movies 2018-07-16 22:45:23 +02:00

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-07-17 12:19:30 +02:00

Confirmed, will have a look…

Confirmed, will have a look…

This issue was referenced by efe94793c0

This issue was referenced by efe94793c0854454517f49f833f688e0652f4ec0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56003
No description provided.